# generated/api/twit.pb.validate.go
@@ -1,7 +1,7 @@
 // Code generated by protoc-gen-validate. DO NOT EDIT.
 // source: api/twit.proto
 
-package user
+package api
 
 import (
 	"bytes"
@@ -1560,7 +1560,9 @@ func (m *CreateVideoReq) validate(all bool) error {
 
 	// no validation rules for TwitId
 
-	// no validation rules for Video
+	// no validation rules for File
+
+	// no validation rules for FileName
 
 	if len(errors) > 0 {
 		return CreateVideoReqMultiError(errors)
@@ -1663,6 +1665,8 @@ func (m *VideoId) validate(all bool) error {
 
 	// no validation rules for Id
 
+	// no validation rules for Url
+
 	if len(errors) > 0 {
 		return VideoIdMultiError(errors)
 	}
@@ -1764,7 +1768,9 @@ func (m *CreatePhotoReq) validate(all bool) error {
 
 	// no validation rules for TwitId
 
-	// no validation rules for Photo
+	// no validation rules for File
+
+	// no validation rules for FileName
 
 	if len(errors) > 0 {
 		return CreatePhotoReqMultiError(errors)
@@ -1867,6 +1873,8 @@ func (m *PhotoId) validate(all bool) error {
 
 	// no validation rules for Id
 
+	// no validation rules for Url
+
 	if len(errors) > 0 {
 		return PhotoIdMultiError(errors)
 	}
@@ -1968,7 +1976,9 @@ func (m *CreateMusicReq) validate(all bool) error {
 
 	// no validation rules for TwitId
 
-	// no validation rules for Mp3
+	// no validation rules for File
+
+	// no validation rules for FileName
 
 	if len(errors) > 0 {
 		return CreateMusicReqMultiError(errors)
@@ -2070,6 +2080,8 @@ func (m *MusicId) validate(all bool) error {
 	var errors []error
 
 	// no validation rules for Id
+
+	// no validation rules for Url
 
 	if len(errors) > 0 {
 		return MusicIdMultiError(errors)
@@ -2559,3 +2571,107 @@ var _ interface {
 	Cause() error
 	ErrorName() string
 } = UrlIdValidationError{}
+
+// Validate checks the field values on FileUploadResponse with the rules
+// defined in the proto definition for this message. If any rules are
+// violated, the first error encountered is returned, or nil if there are no violations.
+func (m *FileUploadResponse) Validate() error {
+	return m.validate(false)
+}
+
+// ValidateAll checks the field values on FileUploadResponse with the rules
+// defined in the proto definition for this message. If any rules are
+// violated, the result is a list of violation errors wrapped in
+// FileUploadResponseMultiError, or nil if none found.
+func (m *FileUploadResponse) ValidateAll() error {
+	return m.validate(true)
+}
+
+func (m *FileUploadResponse) validate(all bool) error {
+	if m == nil {
+		return nil
+	}
+
+	var errors []error
+
+	// no validation rules for Url
+
+	if len(errors) > 0 {
+		return FileUploadResponseMultiError(errors)
+	}
+
+	return nil
+}
+
+// FileUploadResponseMultiError is an error wrapping multiple validation errors
+// returned by FileUploadResponse.ValidateAll() if the designated constraints
+// aren't met.
+type FileUploadResponseMultiError []error
+
+// Error returns a concatenation of all the error messages it wraps.
+func (m FileUploadResponseMultiError) Error() string {
+	var msgs []string
+	for _, err := range m {
+		msgs = append(msgs, err.Error())
+	}
+	return strings.Join(msgs, "; ")
+}
+
+// AllErrors returns a list of validation violation errors.
+func (m FileUploadResponseMultiError) AllErrors() []error { return m }
+
+// FileUploadResponseValidationError is the validation error returned by
+// FileUploadResponse.Validate if the designated constraints aren't met.
+type FileUploadResponseValidationError struct {
+	field  string
+	reason string
+	cause  error
+	key    bool
+}
+
+// Field function returns field value.
+func (e FileUploadResponseValidationError) Field() string { return e.field }
+
+// Reason function returns reason value.
+func (e FileUploadResponseValidationError) Reason() string { return e.reason }
+
+// Cause function returns cause value.
+func (e FileUploadResponseValidationError) Cause() error { return e.cause }
+
+// Key function returns key value.
+func (e FileUploadResponseValidationError) Key() bool { return e.key }
+
+// ErrorName returns error name.
+func (e FileUploadResponseValidationError) ErrorName() string {
+	return "FileUploadResponseValidationError"
+}
+
+// Error satisfies the builtin error interface
+func (e FileUploadResponseValidationError) Error() string {
+	cause := ""
+	if e.cause != nil {
+		cause = fmt.Sprintf(" | caused by: %v", e.cause)
+	}
+
+	key := ""
+	if e.key {
+		key = "key for "
+	}
+
+	return fmt.Sprintf(
+		"invalid %sFileUploadResponse.%s: %s%s",
+		key,
+		e.field,
+		e.reason,
+		cause)
+}
+
+var _ error = FileUploadResponseValidationError{}
+
+var _ interface {
+	Field() string
+	Reason() string
+	Key() bool
+	Cause() error
+	ErrorName() string
+} = FileUploadResponseValidationError{}
